backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: backend
      annotations:
        getambassador.io/inject-traffic-agent: enabled
    spec:
      containers:
      - name: backend
        image: "gcr.io/google-samples/hello-app:2.0"
        ports:
        - name: http
          containerPort: 50000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 50000
    targetPort: http
